--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mantine/hooks": "^7.2.1",
     "@mantine/modals": "^7.2.1",
     "@mantine/nprogress": "^7.2.1",
+    "@react-leaflet/core": "^2.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -24,11 +25,13 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "nodemon": "^3.0.1",
     "npm": "^10.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
