--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemon": "^3.0.1",
     "npm": "^10.2.4",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
