--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "three": "^0.159.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
